--- a/docs/engx/0. Foreword.md
+++ b/docs/engx/0. Foreword.md
@@ -4,52 +4,52 @@
 tags: [EngX]
 -->
 <!-- TOC -->
-* [Foreword](#foreword)
-  * [Standards for systems and software engineering](#standards-for-systems-and-software-engineering)
-  * [Software Development Life Cycle (SDLC)](#software-development-life-cycle-sdlc)
-    * [Definitions](#definitions)
-    * [SDLC benefits](#sdlc-benefits)
-    * [Stages](#stages)
-      * [Planning](#planning)
-      * [Requirements](#requirements)
-      * [Design and prototyping](#design-and-prototyping)
-      * [Software development](#software-development)
-      * [Testing](#testing)
-      * [Deployment](#deployment)
-      * [Operations and maintenance](#operations-and-maintenance)
-    * [SDLC models and methodologies](#sdlc-models-and-methodologies)
-      * [Waterfall model](#waterfall-model)
-      * [V-shaped model](#v-shaped-model)
-      * [Iterative model](#iterative-model)
-      * [Spiral model](#spiral-model)
-      * [Agile Framework](#agile-framework)
-      * [Scrum Framework](#scrum-framework)
-  * [Project plan](#project-plan)
-    * [Why do you need a plan?](#why-do-you-need-a-plan)
-      * [Productivity - Производительность](#productivity---производительность)
-      * [Delegation](#delegation)
-      * [Organization](#organization)
-      * [Motivation](#motivation)
-    * [How a project plan helps the project manager?](#how-a-project-plan-helps-the-project-manager)
-    * [Simple planning tools](#simple-planning-tools)
-    * [Work Breakdown Structure (WBS)](#work-breakdown-structure-wbs)
-      * [Types of WBS in project management](#types-of-wbs-in-project-management)
-      * [Work breakdown structure hierarchy](#work-breakdown-structure-hierarchy)
-        * [WBS level 0](#wbs-level-0)
-        * [WBS level 1](#wbs-level-1)
-        * [WBS level 2](#wbs-level-2)
-        * [WBS level 3](#wbs-level-3)
-      * [How to create a work breakdown structure?](#how-to-create-a-work-breakdown-structure)
-        * [The 100% rule](#the-100-rule)
-        * [The 8/80 rule](#the-880-rule)
-        * [Work package assignments](#work-package-assignments)
-        * [Unique deliverables](#unique-deliverables)
-        * [Clear deadlines](#clear-deadlines)
-        * [Outcomes over actions](#outcomes-over-actions)
-      * [WBS in Agile project management](#wbs-in-agile-project-management)
-    * [Checklists](#checklists)
-    * [Others planning tools](#others-planning-tools)
-  * [to-do](#to-do)
+- [Foreword](#foreword)
+  - [Standards for systems and software engineering](#standards-for-systems-and-software-engineering)
+  - [Software Development Life Cycle (SDLC)](#software-development-life-cycle-sdlc)
+    - [Definitions](#definitions)
+    - [SDLC benefits](#sdlc-benefits)
+    - [Stages](#stages)
+      - [Planning](#planning)
+      - [Requirements](#requirements)
+      - [Design and prototyping](#design-and-prototyping)
+      - [Software development](#software-development)
+      - [Testing](#testing)
+      - [Deployment](#deployment)
+      - [Operations and maintenance](#operations-and-maintenance)
+    - [SDLC models and methodologies](#sdlc-models-and-methodologies)
+      - [Waterfall model](#waterfall-model)
+      - [V-shaped model](#v-shaped-model)
+      - [Iterative model](#iterative-model)
+      - [Spiral model](#spiral-model)
+      - [Agile Framework](#agile-framework)
+      - [Scrum Framework](#scrum-framework)
+  - [Project plan](#project-plan)
+    - [Why do you need a plan?](#why-do-you-need-a-plan)
+      - [Productivity - Производительность](#productivity---производительность)
+      - [Delegation](#delegation)
+      - [Organization](#organization)
+      - [Motivation](#motivation)
+    - [How a project plan helps the project manager?](#how-a-project-plan-helps-the-project-manager)
+    - [Simple planning tools](#simple-planning-tools)
+    - [Work Breakdown Structure (WBS)](#work-breakdown-structure-wbs)
+      - [Types of WBS in project management](#types-of-wbs-in-project-management)
+      - [Work breakdown structure hierarchy](#work-breakdown-structure-hierarchy)
+        - [WBS level 0](#wbs-level-0)
+        - [WBS level 1](#wbs-level-1)
+        - [WBS level 2](#wbs-level-2)
+        - [WBS level 3](#wbs-level-3)
+      - [How to create a work breakdown structure?](#how-to-create-a-work-breakdown-structure)
+        - [The 100% rule](#the-100-rule)
+        - [The 8/80 rule](#the-880-rule)
+        - [Work package assignments](#work-package-assignments)
+        - [Unique deliverables](#unique-deliverables)
+        - [Clear deadlines](#clear-deadlines)
+        - [Outcomes over actions](#outcomes-over-actions)
+      - [WBS in Agile project management](#wbs-in-agile-project-management)
+    - [Checklists](#checklists)
+    - [Others planning tools](#others-planning-tools)
+  - [to-do](#to-do)
 <!-- TOC -->
 ## Standards for systems and software engineering
 
