--- a/docs/engx/1. The Foundation of EngX .md
+++ b/docs/engx/1. The Foundation of EngX .md
@@ -4,57 +4,57 @@
 tags: [EngX]
 -->
 <!-- TOC -->
-* [The Foundation of EngX](#the-foundation-of-engx)
-  * [Introduction to the Foundation of EngX](#introduction-to-the-foundation-of-engx)
-  * [Agile Fundamentals](#agile-fundamentals)
-    * [Elements of Agile Development](#elements-of-agile-development)
-    * [The Agile Mindset](#the-agile-mindset)
-    * [Values and Principles in the Agile Manifesto](#values-and-principles-in-the-agile-manifesto)
-      * [Agile Values](#agile-values)
-      * [Agile Principles](#agile-principles)
-    * [Agile Ways of Working](#agile-ways-of-working)
-      * [What are you doing?](#what-are-you-doing)
-      * [Shifting from Traditional Waterfall to Modern Agile Development](#shifting-from-traditional-waterfall-to-modern-agile-development)
-      * [Agile Focus Areas](#agile-focus-areas)
-      * [Disadvantages of using Agile](#disadvantages-of-using-agile)
-  * [Implementing Agile with the Scrum Framework](#implementing-agile-with-the-scrum-framework)
-    * [Scrum](#scrum)
-      * [Sprint](#sprint)
-      * [Sprint Planning](#sprint-planning)
-        * [Почему этот Sprint ценен?](#почему-этот-sprint-ценен)
-        * [Что может быть готово в этом Sprint?](#что-может-быть-готово-в-этом-sprint)
-        * [Как будет выполняться выбранная работа?](#как-будет-выполняться-выбранная-работа)
-      * [Daily Scrum](#daily-scrum)
-      * [Sprint Review](#sprint-review)
-      * [Sprint Retrospective](#sprint-retrospective)
-    * [Three Pillars of Scrum](#three-pillars-of-scrum)
-      * [Transparency](#transparency)
-      * [Inspection](#inspection)
-      * [Adaptation](#adaptation)
-    * [Tips for Implementing Scrum](#tips-for-implementing-scrum)
-    * [Best Practices for Agile](#best-practices-for-agile)
-  * [The EngX Culture](#the-engx-culture)
-    * [The Agile Engineer](#the-agile-engineer)
-    * [Thriving in a Culture of Engineering Excellence](#thriving-in-a-culture-of-engineering-excellence)
-    * [Delivering Value to Clients](#delivering-value-to-clients)
-      * [Time](#time)
-      * [Quality](#quality)
-      * [Reliability](#reliability)
-    * [Best Practices for Supporting the EngX Culture](#best-practices-for-supporting-the-engx-culture)
-  * [Engineering Practices in Agile-Driven Software Development](#engineering-practices-in-agile-driven-software-development)
-    * [Basic SDLC](#basic-sdlc)
-    * [Building an Agile SDLC](#building-an-agile-sdlc)
-      * [Action 1. Make changes faster](#action-1-make-changes-faster)
-      * [Action 2. Produce a shippable product increment](#action-2-produce-a-shippable-product-increment)
-    * [Key Principles of Agile-Driven Software Development](#key-principles-of-agile-driven-software-development)
-    * [Implementing the Key Principles with CI/CD](#implementing-the-key-principles-with-cicd)
-      * [Continuous Integration](#continuous-integration)
-      * [Continuous Delivery](#continuous-delivery)
-  * [Taking an Agile Approach to a Software Development Project](#taking-an-agile-approach-to-a-software-development-project)
-    * [The Development Phase](#the-development-phase)
-    * [The Testing Phase](#the-testing-phase)
-      * [Pre-Testing Activities](#pre-testing-activities)
-  * [Best Practices for Ensuring Agility of Your Project](#best-practices-for-ensuring-agility-of-your-project)
+- [The Foundation of EngX](#the-foundation-of-engx)
+  - [Introduction to the Foundation of EngX](#introduction-to-the-foundation-of-engx)
+  - [Agile Fundamentals](#agile-fundamentals)
+    - [Elements of Agile Development](#elements-of-agile-development)
+    - [The Agile Mindset](#the-agile-mindset)
+    - [Values and Principles in the Agile Manifesto](#values-and-principles-in-the-agile-manifesto)
+      - [Agile Values](#agile-values)
+      - [Agile Principles](#agile-principles)
+    - [Agile Ways of Working](#agile-ways-of-working)
+      - [What are you doing?](#what-are-you-doing)
+      - [Shifting from Traditional Waterfall to Modern Agile Development](#shifting-from-traditional-waterfall-to-modern-agile-development)
+      - [Agile Focus Areas](#agile-focus-areas)
+      - [Disadvantages of using Agile](#disadvantages-of-using-agile)
+  - [Implementing Agile with the Scrum Framework](#implementing-agile-with-the-scrum-framework)
+    - [Scrum](#scrum)
+      - [Sprint](#sprint)
+      - [Sprint Planning](#sprint-planning)
+        - [Почему этот Sprint ценен?](#почему-этот-sprint-ценен)
+        - [Что может быть готово в этом Sprint?](#что-может-быть-готово-в-этом-sprint)
+        - [Как будет выполняться выбранная работа?](#как-будет-выполняться-выбранная-работа)
+      - [Daily Scrum](#daily-scrum)
+      - [Sprint Review](#sprint-review)
+      - [Sprint Retrospective](#sprint-retrospective)
+    - [Three Pillars of Scrum](#three-pillars-of-scrum)
+      - [Transparency](#transparency)
+      - [Inspection](#inspection)
+      - [Adaptation](#adaptation)
+    - [Tips for Implementing Scrum](#tips-for-implementing-scrum)
+    - [Best Practices for Agile](#best-practices-for-agile)
+  - [The EngX Culture](#the-engx-culture)
+    - [The Agile Engineer](#the-agile-engineer)
+    - [Thriving in a Culture of Engineering Excellence](#thriving-in-a-culture-of-engineering-excellence)
+    - [Delivering Value to Clients](#delivering-value-to-clients)
+      - [Time](#time)
+      - [Quality](#quality)
+      - [Reliability](#reliability)
+    - [Best Practices for Supporting the EngX Culture](#best-practices-for-supporting-the-engx-culture)
+  - [Engineering Practices in Agile-Driven Software Development](#engineering-practices-in-agile-driven-software-development)
+    - [Basic SDLC](#basic-sdlc)
+    - [Building an Agile SDLC](#building-an-agile-sdlc)
+      - [Action 1. Make changes faster](#action-1-make-changes-faster)
+      - [Action 2. Produce a shippable product increment](#action-2-produce-a-shippable-product-increment)
+    - [Key Principles of Agile-Driven Software Development](#key-principles-of-agile-driven-software-development)
+    - [Implementing the Key Principles with CI/CD](#implementing-the-key-principles-with-cicd)
+      - [Continuous Integration](#continuous-integration)
+      - [Continuous Delivery](#continuous-delivery)
+  - [Taking an Agile Approach to a Software Development Project](#taking-an-agile-approach-to-a-software-development-project)
+    - [The Development Phase](#the-development-phase)
+    - [The Testing Phase](#the-testing-phase)
+      - [Pre-Testing Activities](#pre-testing-activities)
+  - [Best Practices for Ensuring Agility of Your Project](#best-practices-for-ensuring-agility-of-your-project)
 <!-- TOC -->
 ## Introduction to the Foundation of EngX
 
@@ -453,11 +453,8 @@ Consider how you can begin to take your projects to the next level by implementi
 - Update and prioritize a backlog regularly with the team. - Регулярно обновляйте вместе с командой список невыполненных работ и определяйте их приоритетность.
 - Create a business roadmap aligned with the product backlog. - Создайте бизнес-план, согласованный с журналом невыполненных работ по продукту.
 - Have regular sprint reviews. - Проводите регулярные обзоры спринта.
-- A Product Owner (PO) provides detailed positive or negative feedback on regular sprint reviews. - 
-  Владелец продукта предоставляет подробные положительные или отрицательные отзывы на регулярных sprint reviews.
-- Re-Prioritize a backlog based on the feedback from PO and stakeholders during regular 
-  demo/review sessions. - Измените приоритеты невыполненной работы на основе 
-  отзывов от PO и заинтересованных сторон во время регулярных демонстрационных/ обзорных сессий.
+- A Product Owner (PO) provides detailed positive or negative feedback on regular sprint reviews. - Владелец продукта предоставляет подробные положительные или отрицательные отзывы на регулярных sprint reviews.
+- Re-Prioritize a backlog based on the feedback from PO and stakeholders during regular demo/review sessions. - Измените приоритеты невыполненной работы на основе отзывов от PO и заинтересованных сторон во время регулярных демонстрационных/ обзорных сессий.
 - Involve the whole team in the decision negotiations. - Вовлеките всю команду в переговоры о принятии решения.
 
 ## The EngX Culture
