--- a/docs/engx/2. Development.md
+++ b/docs/engx/2. Development.md
@@ -4,79 +4,79 @@
 tags: [EngX]
 -->
 <!-- TOC -->
-* [Development](#development)
-  * [Introduction to Development](#introduction-to-development)
-  * [Code Quality](#code-quality)
-    * [Code Quality Fundamentals](#code-quality-fundamentals)
-      * [Functional Code Quality](#functional-code-quality)
-      * [Structural Code Quality](#structural-code-quality)
-    * [The Importance of Code Quality](#the-importance-of-code-quality)
-    * [Improved Maintainability](#improved-maintainability)
-    * [High Cost of Bug](#high-cost-of-bug)
-    * [Supporting Activities for Code Quality](#supporting-activities-for-code-quality)
-      * [Establishing Coding Standards](#establishing-coding-standards)
-      * [Implementing Automated Code Analysis](#implementing-automated-code-analysis)
-    * [Code Quality Metrics](#code-quality-metrics)
-    * [Best Practices for Code Quality](#best-practices-for-code-quality)
-  * [Unit Testing](#unit-testing)
-    * [The Basics of Unit Testing](#the-basics-of-unit-testing)
-      * [The Importance of Unit Tests](#the-importance-of-unit-tests)
-      * [Benefits of Unit Tests](#benefits-of-unit-tests)
-      * [Impacts of Neglecting Unit Tests](#impacts-of-neglecting-unit-tests)
-    * [The Base of the Testing Pyramid: Unit Tests](#the-base-of-the-testing-pyramid-unit-tests)
-      * [The Scope of Testing](#the-scope-of-testing)
-      * [Practical Implications of the Testing Pyramid](#practical-implications-of-the-testing-pyramid)
-    * [Defining Effective Unit Tests](#defining-effective-unit-tests)
-      * [FIRST Principles of Good Unit Testing](#first-principles-of-good-unit-testing)
-      * [Other Attributes of Good Unit Tests](#other-attributes-of-good-unit-tests)
-    * [Code Coverage Metric](#code-coverage-metric)
-    * [Addressing Misconceptions About Unit Testing](#addressing-misconceptions-about-unit-testing)
-    * [Best Practices for Unit Testing](#best-practices-for-unit-testing)
-  * [Code Review](#code-review)
-    * [The Benefits of Code Review](#the-benefits-of-code-review)
-    * [The Risks of Neglecting Code Review](#the-risks-of-neglecting-code-review)
-    * [Code Review Types and Workflow](#code-review-types-and-workflow)
-      * [Code Review Types](#code-review-types)
-      * [Code Review Workflow](#code-review-workflow)
-    * [Key Areas of Code Review](#key-areas-of-code-review)
-    * [Code Review Checklist](#code-review-checklist)
-      * [How to Create a Code Review Checklist](#how-to-create-a-code-review-checklist)
-      * [Developers’ and Reviewers’ Checklists](#developers-and-reviewers-checklists)
-    * [Tips for Implementing Code Review](#tips-for-implementing-code-review)
-      * [Use Time Optimization Tips](#use-time-optimization-tips)
-      * [Conducting Ethical Code Reviews](#conducting-ethical-code-reviews)
-  * [Knowledge Sharing](#knowledge-sharing)
-    * [Healthy vs. Unhealthy Knowledge Sharing](#healthy-vs-unhealthy-knowledge-sharing)
-    * [Impacts of Unhealthy Knowledge Sharing](#impacts-of-unhealthy-knowledge-sharing)
-    * [Facilitating Your Team’s Knowledge Sharing](#facilitating-your-teams-knowledge-sharing)
-    * [Improving Four Project Areas with Knowledge Sharing](#improving-four-project-areas-with-knowledge-sharing)
-    * [Suggesting Improvements to Knowledge Sharing](#suggesting-improvements-to-knowledge-sharing)
-    * [Best Practices for Knowledge Sharing](#best-practices-for-knowledge-sharing)
-  * [Technical Debt](#technical-debt)
-    * [Reasons for Technical Debt](#reasons-for-technical-debt)
-    * [Technical Debt Indicators](#technical-debt-indicators)
-      * [Delivery Indicators](#delivery-indicators)
-    * [Tracking Technical Debt](#tracking-technical-debt)
-      * [Examples of Technical Debt Visualization](#examples-of-technical-debt-visualization)
-    * [Managing Technical Debt](#managing-technical-debt)
-    * [The Risks of Unmanaged Technical Debt](#the-risks-of-unmanaged-technical-debt)
-  * [Branching Strategy](#branching-strategy)
-    * [Version Control Systems](#version-control-systems)
-      * [What is a VCS?](#what-is-a-vcs)
-    * [Repositories and Working Copies](#repositories-and-working-copies)
-      * [Centralized Version Control System (CVCS)](#centralized-version-control-system-cvcs)
-      * [Distributed Version Control System (DVCS)](#distributed-version-control-system-dvcs)
-      * [Git](#git)
-    * [Branching](#branching)
-      * [What is Branching?](#what-is-branching)
-      * [Merge Conflicts](#merge-conflicts)
-      * [Branching Patterns](#branching-patterns)
-        * [Long-Lived Branching Pattern](#long-lived-branching-pattern)
-        * [Short-Lived Branching Pattern](#short-lived-branching-pattern)
-        * [Long-Lived Branching vs. Short-Lived Branching](#long-lived-branching-vs-short-lived-branching)
-    * [Branching Strategies](#branching-strategies)
-      * [Strategies for DVCS: Gitflow and Trunk-Based Development](#strategies-for-dvcs-gitflow-and-trunk-based-development)
-    * [Best Practices for Version Control Systems and Branching Strategies](#best-practices-for-version-control-systems-and-branching-strategies)
+- [Development](#development)
+  - [Introduction to Development](#introduction-to-development)
+  - [Code Quality](#code-quality)
+    - [Code Quality Fundamentals](#code-quality-fundamentals)
+      - [Functional Code Quality](#functional-code-quality)
+      - [Structural Code Quality](#structural-code-quality)
+    - [The Importance of Code Quality](#the-importance-of-code-quality)
+    - [Improved Maintainability](#improved-maintainability)
+    - [High Cost of Bug](#high-cost-of-bug)
+    - [Supporting Activities for Code Quality](#supporting-activities-for-code-quality)
+      - [Establishing Coding Standards](#establishing-coding-standards)
+      - [Implementing Automated Code Analysis](#implementing-automated-code-analysis)
+    - [Code Quality Metrics](#code-quality-metrics)
+    - [Best Practices for Code Quality](#best-practices-for-code-quality)
+  - [Unit Testing](#unit-testing)
+    - [The Basics of Unit Testing](#the-basics-of-unit-testing)
+      - [The Importance of Unit Tests](#the-importance-of-unit-tests)
+      - [Benefits of Unit Tests](#benefits-of-unit-tests)
+      - [Impacts of Neglecting Unit Tests](#impacts-of-neglecting-unit-tests)
+    - [The Base of the Testing Pyramid: Unit Tests](#the-base-of-the-testing-pyramid-unit-tests)
+      - [The Scope of Testing](#the-scope-of-testing)
+      - [Practical Implications of the Testing Pyramid](#practical-implications-of-the-testing-pyramid)
+    - [Defining Effective Unit Tests](#defining-effective-unit-tests)
+      - [FIRST Principles of Good Unit Testing](#first-principles-of-good-unit-testing)
+      - [Other Attributes of Good Unit Tests](#other-attributes-of-good-unit-tests)
+    - [Code Coverage Metric](#code-coverage-metric)
+    - [Addressing Misconceptions About Unit Testing](#addressing-misconceptions-about-unit-testing)
+    - [Best Practices for Unit Testing](#best-practices-for-unit-testing)
+  - [Code Review](#code-review)
+    - [The Benefits of Code Review](#the-benefits-of-code-review)
+    - [The Risks of Neglecting Code Review](#the-risks-of-neglecting-code-review)
+    - [Code Review Types and Workflow](#code-review-types-and-workflow)
+      - [Code Review Types](#code-review-types)
+      - [Code Review Workflow](#code-review-workflow)
+    - [Key Areas of Code Review](#key-areas-of-code-review)
+    - [Code Review Checklist](#code-review-checklist)
+      - [How to Create a Code Review Checklist](#how-to-create-a-code-review-checklist)
+      - [Developers’ and Reviewers’ Checklists](#developers-and-reviewers-checklists)
+    - [Tips for Implementing Code Review](#tips-for-implementing-code-review)
+      - [Use Time Optimization Tips](#use-time-optimization-tips)
+      - [Conducting Ethical Code Reviews](#conducting-ethical-code-reviews)
+  - [Knowledge Sharing](#knowledge-sharing)
+    - [Healthy vs. Unhealthy Knowledge Sharing](#healthy-vs-unhealthy-knowledge-sharing)
+    - [Impacts of Unhealthy Knowledge Sharing](#impacts-of-unhealthy-knowledge-sharing)
+    - [Facilitating Your Team’s Knowledge Sharing](#facilitating-your-teams-knowledge-sharing)
+    - [Improving Four Project Areas with Knowledge Sharing](#improving-four-project-areas-with-knowledge-sharing)
+    - [Suggesting Improvements to Knowledge Sharing](#suggesting-improvements-to-knowledge-sharing)
+    - [Best Practices for Knowledge Sharing](#best-practices-for-knowledge-sharing)
+  - [Technical Debt](#technical-debt)
+    - [Reasons for Technical Debt](#reasons-for-technical-debt)
+    - [Technical Debt Indicators](#technical-debt-indicators)
+      - [Delivery Indicators](#delivery-indicators)
+    - [Tracking Technical Debt](#tracking-technical-debt)
+      - [Examples of Technical Debt Visualization](#examples-of-technical-debt-visualization)
+    - [Managing Technical Debt](#managing-technical-debt)
+    - [The Risks of Unmanaged Technical Debt](#the-risks-of-unmanaged-technical-debt)
+  - [Branching Strategy](#branching-strategy)
+    - [Version Control Systems](#version-control-systems)
+      - [What is a VCS?](#what-is-a-vcs)
+    - [Repositories and Working Copies](#repositories-and-working-copies)
+      - [Centralized Version Control System (CVCS)](#centralized-version-control-system-cvcs)
+      - [Distributed Version Control System (DVCS)](#distributed-version-control-system-dvcs)
+      - [Git](#git)
+    - [Branching](#branching)
+      - [What is Branching?](#what-is-branching)
+      - [Merge Conflicts](#merge-conflicts)
+      - [Branching Patterns](#branching-patterns)
+        - [Long-Lived Branching Pattern](#long-lived-branching-pattern)
+        - [Short-Lived Branching Pattern](#short-lived-branching-pattern)
+        - [Long-Lived Branching vs. Short-Lived Branching](#long-lived-branching-vs-short-lived-branching)
+    - [Branching Strategies](#branching-strategies)
+      - [Strategies for DVCS: Gitflow and Trunk-Based Development](#strategies-for-dvcs-gitflow-and-trunk-based-development)
+    - [Best Practices for Version Control Systems and Branching Strategies](#best-practices-for-version-control-systems-and-branching-strategies)
 <!-- TOC -->
 ## Introduction to Development
 
