--- a/docs/engx/3. Quality Assurance.md
+++ b/docs/engx/3. Quality Assurance.md
@@ -4,81 +4,81 @@
 tags: [EngX]
 -->
 <!-- TOC -->
-* [Introduction to Quality Assurance](#introduction-to-quality-assurance)
-  * [QA Overview](#qa-overview)
-    * [Quality Assurance](#quality-assurance)
-    * [Quality](#quality)
-    * [Quality Attributes](#quality-attributes)
-    * [Testing](#testing)
-    * [Benefits of Software QA](#benefits-of-software-qa)
-  * [Types of Testing](#types-of-testing)
-    * [Manual Testing and Automated Testing](#manual-testing-and-automated-testing)
-  * [Software Testing Life Cycle (STLC)](#software-testing-life-cycle-stlc)
-  * [Testing Documentation](#testing-documentation)
-    * [Test Plan](#test-plan)
-    * [Test Strategy](#test-strategy)
-  * [Test Case Management](#test-case-management)
-    * [The Importance of Test Case Management](#the-importance-of-test-case-management)
-    * [Writing Test Cases](#writing-test-cases)
-    * [Design Techniques for a Good Test Case](#design-techniques-for-a-good-test-case)
-    * [Essential Processes for Test Case Management](#essential-processes-for-test-case-management)
-    * [Test Case Life Cycle](#test-case-life-cycle)
-    * [Reviewing Test Cases to Ensure Quality](#reviewing-test-cases-to-ensure-quality)
-    * [Identifying Test Coverage](#identifying-test-coverage)
-    * [Regression Testing](#regression-testing)
-    * [Creating Test Reports](#creating-test-reports)
-    * [Test Case Management Tools](#test-case-management-tools)
-      * [Test Library](#test-library)
-      * [Test Run](#test-run)
-      * [Recommended Test Case Management Tools](#recommended-test-case-management-tools)
-  * [Defect Management](#defect-management)
-    * [Basics of Defect Management](#basics-of-defect-management)
-    * [The Value of Defect Management](#the-value-of-defect-management)
-    * [Managing Defects](#managing-defects)
-    * [The Defect Management Process](#the-defect-management-process)
-    * [The Defect Life Cycle](#the-defect-life-cycle)
-      * [Defect Discovery](#defect-discovery)
-      * [Defect Triage](#defect-triage)
-      * [Change Request](#change-request)
-      * [Using Root Cause Analysis to Resolve Defects](#using-root-cause-analysis-to-resolve-defects)
-        * [5 Why's: The Ultimate Root Cause Analysis Tool](#5-whys-the-ultimate-root-cause-analysis-tool)
-      * [Defect Verification and Closure](#defect-verification-and-closure)
-    * [Production Bugs](#production-bugs)
-    * [Defect Reporting and Metrics](#defect-reporting-and-metrics)
-      * [Test Reporting](#test-reporting)
-      * [Generating Defect Reports and Metrics](#generating-defect-reports-and-metrics)
-  * [Testing of Non-Functional Requirements](#testing-of-non-functional-requirements)
-    * [The Value of Non-Functional Testing](#the-value-of-non-functional-testing)
-    * [Functional vs. Non-Functional Testing](#functional-vs-non-functional-testing)
-    * [Functional vs. Non-Functional Testing Processes](#functional-vs-non-functional-testing-processes)
-      * [Planning](#planning)
-      * [Preparation](#preparation)
-      * [Test Execution](#test-execution)
-      * [Record](#record)
-      * [Analysis and Improvement](#analysis-and-improvement)
-    * [Types of Non-Functional Testing](#types-of-non-functional-testing)
-      * [Performance Testing](#performance-testing)
-    * [Non-Functional Testing: A Mandatory Part of SDLC](#non-functional-testing-a-mandatory-part-of-sdlc)
-    * [Automating Non-Functional Testing](#automating-non-functional-testing)
-  * [QA Metrics](#qa-metrics)
-    * [Types of QA Metrics](#types-of-qa-metrics)
-    * [QA Metrics Life Cycle](#qa-metrics-life-cycle)
-      * [Analyze](#analyze)
-      * [Communicate](#communicate)
-      * [Evaluate](#evaluate)
-      * [Report and Analyze](#report-and-analyze)
-  * [Automated Testing](#automated-testing)
-    * [Benefits and Costs of Automated Testing](#benefits-and-costs-of-automated-testing)
-    * [Critical Attributes of Automated Tests](#critical-attributes-of-automated-tests)
-      * [Feedback Time](#feedback-time)
-      * [Determinism](#determinism)
-      * [Deterministic vs. Flaky Tests](#deterministic-vs-flaky-tests)
-    * [Automated Testing in the Test Pipeline](#automated-testing-in-the-test-pipeline)
-    * [Building a Well-Balanced Automated Test Suite](#building-a-well-balanced-automated-test-suite)
-    * [UI Test](#ui-test)
-    * [Team Involvement in Creating a Balanced Automated Test Suite](#team-involvement-in-creating-a-balanced-automated-test-suite)
-    * [Test Data Management](#test-data-management)
-    * [Automated Testing Metrics](#automated-testing-metrics)
+- [Introduction to Quality Assurance](#introduction-to-quality-assurance)
+  - [QA Overview](#qa-overview)
+    - [Quality Assurance](#quality-assurance)
+    - [Quality](#quality)
+    - [Quality Attributes](#quality-attributes)
+    - [Testing](#testing)
+    - [Benefits of Software QA](#benefits-of-software-qa)
+  - [Types of Testing](#types-of-testing)
+    - [Manual Testing and Automated Testing](#manual-testing-and-automated-testing)
+  - [Software Testing Life Cycle (STLC)](#software-testing-life-cycle-stlc)
+  - [Testing Documentation](#testing-documentation)
+    - [Test Plan](#test-plan)
+    - [Test Strategy](#test-strategy)
+  - [Test Case Management](#test-case-management)
+    - [The Importance of Test Case Management](#the-importance-of-test-case-management)
+    - [Writing Test Cases](#writing-test-cases)
+    - [Design Techniques for a Good Test Case](#design-techniques-for-a-good-test-case)
+    - [Essential Processes for Test Case Management](#essential-processes-for-test-case-management)
+    - [Test Case Life Cycle](#test-case-life-cycle)
+    - [Reviewing Test Cases to Ensure Quality](#reviewing-test-cases-to-ensure-quality)
+    - [Identifying Test Coverage](#identifying-test-coverage)
+    - [Regression Testing](#regression-testing)
+    - [Creating Test Reports](#creating-test-reports)
+    - [Test Case Management Tools](#test-case-management-tools)
+      - [Test Library](#test-library)
+      - [Test Run](#test-run)
+      - [Recommended Test Case Management Tools](#recommended-test-case-management-tools)
+  - [Defect Management](#defect-management)
+    - [Basics of Defect Management](#basics-of-defect-management)
+    - [The Value of Defect Management](#the-value-of-defect-management)
+    - [Managing Defects](#managing-defects)
+    - [The Defect Management Process](#the-defect-management-process)
+    - [The Defect Life Cycle](#the-defect-life-cycle)
+      - [Defect Discovery](#defect-discovery)
+      - [Defect Triage](#defect-triage)
+      - [Change Request](#change-request)
+      - [Using Root Cause Analysis to Resolve Defects](#using-root-cause-analysis-to-resolve-defects)
+        - [5 Why's: The Ultimate Root Cause Analysis Tool](#5-whys-the-ultimate-root-cause-analysis-tool)
+      - [Defect Verification and Closure](#defect-verification-and-closure)
+    - [Production Bugs](#production-bugs)
+    - [Defect Reporting and Metrics](#defect-reporting-and-metrics)
+      - [Test Reporting](#test-reporting)
+      - [Generating Defect Reports and Metrics](#generating-defect-reports-and-metrics)
+  - [Testing of Non-Functional Requirements](#testing-of-non-functional-requirements)
+    - [The Value of Non-Functional Testing](#the-value-of-non-functional-testing)
+    - [Functional vs. Non-Functional Testing](#functional-vs-non-functional-testing)
+    - [Functional vs. Non-Functional Testing Processes](#functional-vs-non-functional-testing-processes)
+      - [Planning](#planning)
+      - [Preparation](#preparation)
+      - [Test Execution](#test-execution)
+      - [Record](#record)
+      - [Analysis and Improvement](#analysis-and-improvement)
+    - [Types of Non-Functional Testing](#types-of-non-functional-testing)
+      - [Performance Testing](#performance-testing)
+    - [Non-Functional Testing: A Mandatory Part of SDLC](#non-functional-testing-a-mandatory-part-of-sdlc)
+    - [Automating Non-Functional Testing](#automating-non-functional-testing)
+  - [QA Metrics](#qa-metrics)
+    - [Types of QA Metrics](#types-of-qa-metrics)
+    - [QA Metrics Life Cycle](#qa-metrics-life-cycle)
+      - [Analyze](#analyze)
+      - [Communicate](#communicate)
+      - [Evaluate](#evaluate)
+      - [Report and Analyze](#report-and-analyze)
+  - [Automated Testing](#automated-testing)
+    - [Benefits and Costs of Automated Testing](#benefits-and-costs-of-automated-testing)
+    - [Critical Attributes of Automated Tests](#critical-attributes-of-automated-tests)
+      - [Feedback Time](#feedback-time)
+      - [Determinism](#determinism)
+      - [Deterministic vs. Flaky Tests](#deterministic-vs-flaky-tests)
+    - [Automated Testing in the Test Pipeline](#automated-testing-in-the-test-pipeline)
+    - [Building a Well-Balanced Automated Test Suite](#building-a-well-balanced-automated-test-suite)
+    - [UI Test](#ui-test)
+    - [Team Involvement in Creating a Balanced Automated Test Suite](#team-involvement-in-creating-a-balanced-automated-test-suite)
+    - [Test Data Management](#test-data-management)
+    - [Automated Testing Metrics](#automated-testing-metrics)
 <!-- TOC -->
 The success and longevity of any solution your team delivers depends on the overall quality of your software development process. As part of that process, your team must work with test engineers to ensure that the software performs as designed.
 
