--- a/docs/engx/4. Infrastructure Management.md
+++ b/docs/engx/4. Infrastructure Management.md
@@ -4,16 +4,16 @@
 tags: [EngX]
 -->
 <!-- TOC -->
-* [Infrastructure Management](#infrastructure-management)
-  * [Infrastructure Management (IM)](#infrastructure-management-im)
-  * [System Infrastructure and Cloud Service Models](#system-infrastructure-and-cloud-service-models)
-    * [System Infrastructure Options](#system-infrastructure-options)
-    * [Cloud Financial Operations (Cloud FinOps)](#cloud-financial-operations-cloud-finops)
-    * [Cloud Service Models](#cloud-service-models)
-  * [Approaches to Infrastructure Management](#approaches-to-infrastructure-management)
-  * [Infrastructure as Code](#infrastructure-as-code)
-  * [Infrastructure Management Tools](#infrastructure-management-tools)
-    * [Terraform Overview](#terraform-overview)
+- [Infrastructure Management](#infrastructure-management)
+  - [Infrastructure Management (IM)](#infrastructure-management-im)
+  - [System Infrastructure and Cloud Service Models](#system-infrastructure-and-cloud-service-models)
+    - [System Infrastructure Options](#system-infrastructure-options)
+    - [Cloud Financial Operations (Cloud FinOps)](#cloud-financial-operations-cloud-finops)
+    - [Cloud Service Models](#cloud-service-models)
+  - [Approaches to Infrastructure Management](#approaches-to-infrastructure-management)
+  - [Infrastructure as Code](#infrastructure-as-code)
+  - [Infrastructure Management Tools](#infrastructure-management-tools)
+    - [Terraform Overview](#terraform-overview)
 <!-- TOC -->
 With widespread digitalization, it’s almost impossible for organizations to maintain a business without efficient IT infrastructure. Although the demand for servers has grown steadily over the years, the global pandemic exploded the market for them: in 2020, almost 13 million server units were shipped worldwide. The vast number of IT infrastructure assets in companies made system engineers search for creative ways to manage them. As today’s teams deal with unpredictable and unstable loads on projects due to organizational and market changes, engineers must be able to quickly and effectively launch, set up, shut down, and terminate servers daily. The infrastructure management industry seeks to provide solutions to this challenge.
 
