--- a/docs/engx/5. Secure SDLC.md
+++ b/docs/engx/5. Secure SDLC.md
@@ -4,25 +4,25 @@
 tags: [EngX]
 -->
 <!-- TOC -->
-* [Secure SDLC](#secure-sdlc)
-  * [The Risks of Poorly Secured Software](#the-risks-of-poorly-secured-software)
-  * [Embedding Security into the SDLC](#embedding-security-into-the-sdlc)
-  * [Shift-Left Security with Secure SDLC](#shift-left-security-with-secure-sdlc)
-  * [Secure SDLC Phases and Activities](#secure-sdlc-phases-and-activities)
-    * [Training](#training)
-    * [Requirements](#requirements)
-    * [Design](#design)
-    * [Software Development](#software-development)
-    * [Testing](#testing)
-    * [Maintenance](#maintenance)
-  * [Security in Agile Development](#security-in-agile-development)
-  * [Accelerate SSDLC with DevSecOps](#accelerate-ssdlc-with-devsecops)
-  * [Maintaining Secure SDLC](#maintaining-secure-sdlc)
-  * [Prevent and Detect Security Issues](#prevent-and-detect-security-issues)
-  * [Determining Security Risk Severity](#determining-security-risk-severity)
-  * [Catching and Handling Security Issues](#catching-and-handling-security-issues)
-  * [A Strong Team for SSDLC Support](#a-strong-team-for-ssdlc-support)
-  * [Cybersecurity Maturity Models](#cybersecurity-maturity-models)
+- [Secure SDLC](#secure-sdlc)
+  - [The Risks of Poorly Secured Software](#the-risks-of-poorly-secured-software)
+  - [Embedding Security into the SDLC](#embedding-security-into-the-sdlc)
+  - [Shift-Left Security with Secure SDLC](#shift-left-security-with-secure-sdlc)
+  - [Secure SDLC Phases and Activities](#secure-sdlc-phases-and-activities)
+    - [Training](#training)
+    - [Requirements](#requirements)
+    - [Design](#design)
+    - [Software Development](#software-development)
+    - [Testing](#testing)
+    - [Maintenance](#maintenance)
+  - [Security in Agile Development](#security-in-agile-development)
+  - [Accelerate SSDLC with DevSecOps](#accelerate-ssdlc-with-devsecops)
+  - [Maintaining Secure SDLC](#maintaining-secure-sdlc)
+  - [Prevent and Detect Security Issues](#prevent-and-detect-security-issues)
+  - [Determining Security Risk Severity](#determining-security-risk-severity)
+  - [Catching and Handling Security Issues](#catching-and-handling-security-issues)
+  - [A Strong Team for SSDLC Support](#a-strong-team-for-ssdlc-support)
+  - [Cybersecurity Maturity Models](#cybersecurity-maturity-models)
 <!-- TOC -->
 To release an application, engineers must perform security checks at some point in the development process. However, the software development life cycle (SDLC) does not indicate how and when to perform these activities, and frequently, security becomes an afterthought or an inhibitor to launch. For many projects, it isn’t until the last stage of development that teams begin addressing security issues. Often these issues are tackled simultaneously, which leads to delays in project implementation and the accumulation of additional costs.
 
